--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -134,9 +134,10 @@
                     android:layout_marginBottom="2dp" />
 
                 <ImageButton
+                    android:foreground="?attr/selectableItemBackground"
                     android:id="@+id/share"
                     android:backgroundTint="@color/transparent"
-                    android:src="@drawable/ic_share"
+                    android:src="@drawable/share"
                     android:layout_alignParentEnd="true"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
