--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -85,7 +85,7 @@
 
     <style name="Tabstitle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:fontFamily">@font/lato_bold</item>
-        <item name="android:textAllCaps">true</item>
+        <item name="android:capitalize">words</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:padding">5dp</item>
