--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,12 +26,12 @@
             android:layout_above="@id/navigation"
             android:layout_below="@id/toolbar" />
         <androidx.appcompat.widget.Toolbar
+            app:title="Home"
             android:id="@+id/toolbar"
             android:elevation="0dp"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:animateLayoutChanges="true"
-            app:titleTextColor="@color/colorPrimary"
             >
 
             <de.hdodenhof.circleimageview.CircleImageView
