--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,101 +2,102 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <androidx.viewpager.widget.ViewPager
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+            android:id="@+id/quotespager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-
-            <androidx.viewpager.widget.ViewPager
-                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
-                android:id="@+id/quotespager"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+            android:layout_height="match_parent"/>
 
 
 
 
-            <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/appbar"
-                android:fitsSystemWindows="true"
-                android:background="?android:colorBackground"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
+            android:fitsSystemWindows="true"
+            android:background="?android:colorBackground"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/collapsetoolbar"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:titleEnabled="false"
+                app:contentScrim="?android:colorBackground"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <com.google.android.material.appbar.CollapsingToolbarLayout
-                    android:id="@+id/collapsetoolbar"
-                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                    app:titleEnabled="false"
-                    app:contentScrim="?android:colorBackground"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                        <com.facebook.shimmer.ShimmerFrameLayout
-                            android:id="@+id/photoshimmer"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            app:shimmer_auto_start="true"
-                            app:shimmer_base_color="?android:textColorHint"
-                            app:shimmer_colored="true"
-                            app:shimmer_direction="left_to_right"
-                            app:shimmer_highlight_color="@color/colorPrimaryDark"
-                            app:shimmer_repeat_mode="reverse"
-                            app:shimmer_shape="radial">
-                            <de.hdodenhof.circleimageview.CircleImageView
-                                android:id="@+id/profilepic"
-                                android:layout_width="150dp"
-                                android:layout_height="150dp"
-                                android:contentDescription="Profile picture"
-                                android:fitsSystemWindows="true"
-                                android:src="@drawable/ic_undraw_new_ideas_jdea"
-                                app:civ_border_color="@color/colorAccent"
-                                app:civ_border_width="3dp" />
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/photoshimmer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:shimmer_auto_start="true"
+                    app:shimmer_base_color="?android:textColorHint"
+                    app:shimmer_colored="true"
+                    app:shimmer_direction="left_to_right"
+                    app:shimmer_highlight_color="@color/colorPrimaryDark"
+                    app:shimmer_repeat_mode="reverse"
+                    app:shimmer_shape="radial">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/profilepic"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:tooltipText="Alterar foto de perfil"
+                        android:contentDescription="Profile picture"
+                        android:fitsSystemWindows="true"
+                        android:src="@drawable/ic_undraw_new_ideas_jdea"
+                        app:civ_border_color="@color/colorAccent"
+                        app:civ_border_width="3dp" />
 
-                        </com.facebook.shimmer.ShimmerFrameLayout>
-                    <androidx.appcompat.widget.Toolbar
-                        android:id="@+id/toolbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:layout_collapseMode="pin" />
-
-
-                </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-                <LinearLayout
+                </com.facebook.shimmer.ShimmerFrameLayout>
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/username"
-                        style="@style/TextAppearance.AppCompat.Title"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:padding="4dp"
-                        android:textAlignment="center" />
-
-                    <com.google.android.material.tabs.TabLayout
-                        android:id="@+id/usertabs"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:tabGravity="start"
-                        app:tabIndicatorFullWidth="false"
-                        app:tabMode="scrollable"
-                        app:tabSelectedTextColor="@color/colorPrimary"
-                        app:tabTextAppearance="@style/Tabstitle"
-                        app:tabTextColor="?android:textColorHint" />
-
-                </LinearLayout>
+                    app:layout_collapseMode="parallax" />
 
 
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-            </com.google.android.material.appbar.AppBarLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/username"
+                    style="@style/TextAppearance.AppCompat.Title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:padding="4dp"
+                    android:textAlignment="center" />
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/usertabs"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:tabGravity="start"
+                    app:tabIndicatorFullWidth="false"
+                    app:tabMode="scrollable"
+                    app:tabSelectedTextColor="@color/colorPrimary"
+                    app:tabTextAppearance="@style/Tabstitle"
+                    app:tabTextColor="?android:textColorHint" />
+
+            </LinearLayout>
+
+
+
+        </com.google.android.material.appbar.AppBarLayout>
 
 
 
 
-        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
 </layout>
