--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?android:colorBackground"
-        tools:context=".View.fragments.ProfileFragment">
+        tools:context=".view.fragments.ProfileFragment">
 
         <ProgressBar
             android:id="@+id/loading"
