--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,6 +36,7 @@
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <LinearLayout
+                    android:id="@+id/banner"
                     app:layout_collapseMode="parallax"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
