--- a/app/src/main/res/layout/newquotepopup.xml
+++ b/app/src/main/res/layout/newquotepopup.xml
@@ -89,11 +89,9 @@
 
 
             <LinearLayout
-                android:layout_margin="10dp"
                 android:id="@+id/card"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:hapticFeedbackEnabled="true"
-                android:layout_marginBottom="5dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:animateLayoutChanges="true">
@@ -128,13 +126,7 @@
                             android:padding="5dp"
                             android:text="@string/username"
                             android:textSize="12sp" />
-                        <TextView
-                            android:textSize="12sp"
-                            android:textStyle="italic"
-                            android:id="@+id/dia"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:padding="5dp" />
+
                     </LinearLayout>
                 </LinearLayout>
 
@@ -153,8 +145,9 @@
                         android:gravity="center"
                         android:orientation="vertical">
 
-                        <TextView
+                        <EditText
                             android:id="@+id/quote"
+                            android:hint="@string/quote"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:backgroundTint="@color/transparent"
@@ -163,8 +156,9 @@
                             android:textSize="20sp"
                             android:typeface="normal" />
 
-                        <TextView
+                        <EditText
                             android:id="@+id/author"
+                            android:hint="@string/author"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
