--- a/app/src/main/res/drawable/posts.xml
+++ b/app/src/main/res/drawable/posts.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="false"  android:drawable="@drawable/ic_post_it_outline" />
-    <item android:state_selected="true" android:drawable="@drawable/ic_post_it" />
+    <item android:state_selected="false"  android:drawable="@drawable/ic_bookmark_border_black_24dp" />
+    <item android:state_selected="true" android:drawable="@drawable/ic_bookmark_black_24dp" />
 
 </selector>
